Switch to Java 17